force-app/main/default/objects/ClusterModel__c/ClusterModel__c.object-meta.xml
<CustomObject>
    <label>Cluster Model</label>
    <nameField>
        <label>ClusterModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cluster Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>