force-app/main/default/objects/ClusterModel__c/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <label>Algorithm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>