force-app/main/default/objects/ClusterModel__c/fields/isCustomSoql__c.field-meta.xml
<CustomField>
    <fullName>isCustomSoql__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Soql</label>
    <type>Checkbox</type>
</CustomField>