force-app/main/default/objects/ClusterModel__c/fields/NumberOfClusters__c.field-meta.xml
<CustomField>
    <fullName>NumberOfClusters__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Default Number Of Clusters</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>