force-app/main/default/objects/ClusterModel__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>